--- a/projects/linq-orm/Cargo.toml
+++ b/projects/linq-orm/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "sub_projects"
-publish = false
+name = "linq-core"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
 repository = "https://github.com/oovm/sub_projects"
-documentation = "https://docs.rs/sub_projects"
+documentation = "https://docs.rs/linq-core"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+sqlparser = "0.28.0"
 
 [dev-dependencies]
 
