--- a/projects/linq-core/Cargo.toml
+++ b/projects/linq-core/Cargo.toml
@@ -9,7 +9,12 @@ readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 
+[lib]
+proc-macro = true
+
 [dependencies]
+proc-macro2 = "1.0.47"
+itertools = "0.10.5"
 
 [dev-dependencies]
 
