Add connection methods

--- a/projects/game-orm/Cargo.toml
+++ b/projects/game-orm/Cargo.toml
@@ -11,27 +11,12 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
-sqlparser = "0.28.0"
-linq = "0.0.1-release"
-sea-orm = "0.10.5"
-tokio = { version = "1.13.0", features = ["full"] }
+serde = { version = "1.0.149", features = ["derive"] }
+
+[dependencies.sea-orm]
+version = "0.10.5"
+features = ["runtime-tokio-rustls", "sqlx-postgres"]
 
 [dependencies.sqlx]
 version = "0.6.2"
-features = ["runtime-tokio-rustls", "uuid", "chrono"]
-
-#[dependencies.linq-core]
-#version = "0.0.1"
-#path = "../linq-core"
-#features = ["runtime-tokio-rustls", "uuid", "chrono"]
-
-#[dependencies.linq-macro]
-#version = "0.0.1"
-#path = "../linq-macro"
-#features = ["runtime-tokio-rustls", "uuid", "chrono"]
-
-[dev-dependencies]
-
-[features]
-default = ["postgres"]
-postgres = ["sqlx/postgres"]
+features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres"]
