--- a/projects/game-server/Cargo.toml
+++ b/projects/game-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "linq-core"
+name = "game-server"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
@@ -11,6 +11,14 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
+tokio = { version = "1.23.0", features = ["full"] }
+
+[dependencies.sqlx]
+version = "0.6.2"
+features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres"]
+
+[dependencies.game-orm]
+path = "../game-orm"
 
 [dev-dependencies]
 
