--- a/projects/game-server/Cargo.toml
+++ b/projects/game-server/Cargo.toml
@@ -12,6 +12,9 @@ edition = "2021"
 [dependencies]
 itertools = "0.10.5"
 tokio = { version = "1.23.0", features = ["full"] }
+uuid = { version = "1.2.2", features = ["serde", "v4"] }
+chrono = { version = "0.4.23", features = ["serde"] }
+mockall = "0.11.3"
 
 #[dependencies.sqlx]
 #version = "0.6.2"
