--- a/projects/forma-core/Cargo.toml
+++ b/projects/forma-core/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "game-orm"
+name = "forma-core"
 publish = false
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
-description = "..."
+description = "math for note"
 repository = "https://github.com/oovm/sub_projects"
 documentation = "https://docs.rs/linq-core"
 readme = "Readme.md"
@@ -13,10 +13,3 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.149", features = ["derive"] }
 
-[dependencies.sea-orm]
-version = "0.10.5"
-features = ["runtime-tokio-rustls", "sqlx-postgres"]
-
-#[dependencies.sqlx]
-#version = "0.6.2"
-#features = ["runtime-tokio-rustls", "uuid", "chrono", "postgres"]
